Started to get familiar with javascript, started to move some code to its proper place (rendering in RenderManager etc)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <script type="text/javascript" src="scripts/utilities/gl-matrix.js"></script>
         <script type="text/javascript" src="scripts/utilities/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="scripts/utilities/utils.js"></script>
-        <script type="text/javascript" src="scripts/main.js"></script>
+        <script type="text/javascript" src="scripts/Camera.js"></script>
+        <script type="text/javascript" src="scripts/RenderManager.js"></script>
+        <script type="text/javascript" src="scripts/Game.js"></script>
         <title>2DGame</title>
     </head>
     <body onload="startGL();">
