Added keyEvents and ticks, also movement of the camera.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="scripts/utilities/utils.js"></script>
         <script type="text/javascript" src="scripts/Camera.js"></script>
         <script type="text/javascript" src="scripts/RenderManager.js"></script>
+        <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
         <script type="text/javascript" src="scripts/Game.js"></script>
         <title>2DGame</title>
     </head>
