Added Texture, refactored Camera class

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="scripts/Camera.js"></script>
         <script type="text/javascript" src="scripts/RenderManager.js"></script>
         <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
+        <script type="text/javascript" src="scripts/Texture.js"></script>
         <script type="text/javascript" src="scripts/Game.js"></script>
         <title>2DGame</title>
     </head>
