Added a Render file with manager and RenderSquare, added a Model file with inheritence. Added support for normals and texcoords for models.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <script type="text/javascript" src="scripts/utilities/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="scripts/utilities/utils.js"></script>
         <script type="text/javascript" src="scripts/Camera.js"></script>
-        <script type="text/javascript" src="scripts/RenderManager.js"></script>
+        <script type="text/javascript" src="scripts/Render.js"></script>
+        <script type="text/javascript" src="scripts/Model.js"></script>
         <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
         <script type="text/javascript" src="scripts/Texture.js"></script>
         <script type="text/javascript" src="scripts/Game.js"></script>
-        <title>2DGame</title>
+        <title>WebScroller</title>
     </head>
     <body onload="startGL();">
         <canvas id="canvas" style="border: none;" width="800" height="600"> </canvas>
