Moved out inheritance to its own file, added entity for base,enemy and player (very basic).

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="scripts/Camera.js"></script>
         <script type="text/javascript" src="scripts/Render.js"></script>
         <script type="text/javascript" src="scripts/Model.js"></script>
+        <script type="text/javascript" src="scripts/utilities/Inheritance.js"></script>
         <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
         <script type="text/javascript" src="scripts/Texture.js"></script>
         <script type="text/javascript" src="scripts/Game.js"></script>
