Added world, added renderer for world and entities

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="scripts/Model.js"></script>
         <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
         <script type="text/javascript" src="scripts/Texture.js"></script>
+        <script type="text/javascript" src="scripts/World.js"></script>
         <script type="text/javascript" src="scripts/Game.js"></script>
         <title>WebScroller</title>
     </head>
