--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
         <script type="text/javascript" src="scripts/utilities/gl-matrix.js"></script>
         <script type="text/javascript" src="scripts/utilities/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="scripts/utilities/utils.js"></script>
+        <script type="text/javascript" src="scripts/utilities/Inheritance.js"></script>
+        <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
+        <script type="text/javascript" src="scripts/utilities/Texture.js"></script>        
+        
         <script type="text/javascript" src="scripts/Camera.js"></script>
         <script type="text/javascript" src="scripts/Render.js"></script>
         <script type="text/javascript" src="scripts/Model.js"></script>
-        <script type="text/javascript" src="scripts/utilities/Inheritance.js"></script>
-        <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
-        <script type="text/javascript" src="scripts/Texture.js"></script>
+        <script type="text/javascript" src="scripts/Entity.js"></script>
         <script type="text/javascript" src="scripts/World.js"></script>
         <script type="text/javascript" src="scripts/Game.js"></script>
+        
         <title>WebScroller</title>
     </head>
     <body onload="startGL();">
