--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <script type="text/javascript" src="scripts/Entity.js"></script>
         <script type="text/javascript" src="scripts/World.js"></script>
         <script type="text/javascript" src="scripts/Game.js"></script>
-        
+        <script type="text/javascript" src="scripts/Emitter.js"></script>
+        <script type="text/javascript" src="scripts/Particle.js"></script>
         
         <title>WebScroller</title>
     </head>
