Added tile for foreground and background, moved xml loading from game, moved tileresources.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
         <script type="text/javascript" src="scripts/utilities/Texture.js"></script>        
         
+        <script type="text/javascript" src="scripts/xml.js"></script>
         <script type="text/javascript" src="scripts/Tile.js"></script>
         <script type="text/javascript" src="scripts/Camera.js"></script>
         <script type="text/javascript" src="scripts/Render.js"></script>
