Started to add editor, removed some debug prints

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     </head>
     <body onload="startGL();">
         <canvas id="canvas" style="border: none;" width="800" height="400"> </canvas>
+        <a href="editor.html">Go to editor</a>
     </body>
 </html>
