Added a simple light, only diffuse for now and only applies to tiles.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="scripts/Game.js"></script>
         <script type="text/javascript" src="scripts/Emitter.js"></script>
         <script type="text/javascript" src="scripts/Particle.js"></script>
+        <script type="text/javascript" src="scripts/Light.js"></script>
         
         <title>WebScroller</title>
     </head>
