Added tearable cloth and some tiles.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script type="text/javascript" src="scripts/Emitter.js"></script>
         <script type="text/javascript" src="scripts/Particle.js"></script>
         <script type="text/javascript" src="scripts/Light.js"></script>
+        <script type="text/javascript" src="scripts/Cloth.js"></script>
         
         <title>WebScroller</title>
     </head>
