--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="scripts/Particle.js"></script>
         <script type="text/javascript" src="scripts/Light.js"></script>
         <script type="text/javascript" src="scripts/Cloth.js"></script>
-        
+        <script type="text/javascript" src="scripts/BoundingBox.js"></script>
         <title>WebScroller</title>
     </head>
     <body onload="startGL();">
