--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <script type="text/javascript" src="scripts/Light.js"></script>
         <script type="text/javascript" src="scripts/Fabric.js"></script>
         <script type="text/javascript" src="scripts/BoundingBox.js"></script>
+        <script type="text/javascript" src="scripts/ShadowHandler.js"></script>
+        <script type="text/javascript" src="scripts/Shadow.js"></script>
         <title>WebScroller</title>
     </head>
     <body onload="startGL();">
