Added Quadtree for bounding boxes, are to be used in collision.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <script type="text/javascript" src="scripts/BoundingBox.js"></script>
         <script type="text/javascript" src="scripts/ShadowHandler.js"></script>
         <script type="text/javascript" src="scripts/Shadow.js"></script>
+        
+        <script type="text/javascript" src="scripts/QuadTree.js"></script>
+        <script type="text/javascript" src="scripts/QuadLine.js"></script>
+        <script type="text/javascript" src="scripts/QuadPoint.js"></script>
+        <script type="text/javascript" src="scripts/QuadRect.js"></script>
         <title>WebScroller</title>
     </head>
     <body onload="startGL();">
