--- a/editor.html
+++ b/editor.html
@@ -9,13 +9,12 @@
         <script type="text/javascript" src="scripts/utilities/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="scripts/utilities/utils.js"></script>
         <script type="text/javascript" src="scripts/utilities/Inheritance.js"></script>
-        <script type="text/javascript" src="scripts/utilities/KeyManager.js"></script>
+        <script type="text/javascript" src="scripts/utilities/InputManager.js"></script>
         <script type="text/javascript" src="scripts/utilities/Texture.js"></script>        
         
         <script type="text/javascript" src="scripts/xml.js"></script>
         <script type="text/javascript" src="scripts/Tile.js"></script>
         <script type="text/javascript" src="scripts/Camera.js"></script>
-        <script type="text/javascript" src="scripts/Render.js"></script>
         <script type="text/javascript" src="scripts/Model.js"></script>
         <script type="text/javascript" src="scripts/Entity.js"></script>
         <script type="text/javascript" src="scripts/World.js"></script>
@@ -24,82 +23,14 @@
         <script type="text/javascript" src="scripts/Particle.js"></script>
         <script type="text/javascript" src="scripts/EditorXml.js"></script>
         <script type="text/javascript" src="scripts/EditorRenderer.js"></script>
+        <script type="text/javascript" src="scripts/EditorMain.js"></script>
         <script type="text/javascript" src="scripts/Editor.js"></script>
-        
+        <script type="text/javascript" src="scripts/Window.js"></script>
+        <script type="text/javascript" src="scripts/Button.js"></script>
         <title>Editor for WebScroller</title>
     </head>
     <body onload="startEditor();">
-        <canvas id="canvas" style="border: none;" width="1200" height="600"> </canvas>
+        <canvas id="canvas"> </canvas>
         <a href="index.html">Back to game</a>
-        <div class="tileBase"></div>
-		<div class="tile">
-        	<h2>Background Tile</h2>
-        	<input type="file" id="bgImage"/>
-        	<div>
-	        	<div class = "sameLine">
-	        		<label for="name">Size X</label>
-	        		<input type="text" name="name" id="name" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-				<div class = "sameLine">
-	     			<label for="name">Size Y</label>
-	     			<input type="text" name="name" id="name" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-			</div>
-        	<button type="submit" onclick="addBgTile();">Add Tile</button>
-		</div>
-		<div class="tile">
-        	<h2>Middleground Tile</h2>
-        	<input type="file" id="mgImage"/>
-        	<div>
-	        	<div class = "sameLine">
-	        		<label for="name">Size X</label>
-	        		<input type="text" name="name" id="name" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-				<div class = "sameLine">
-	     			<label for="name">Size Y</label>
-	     			<input type="text" name="name" id="name" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-			</div>
-        	<form>
-				<input type="radio" name="bb" value="square" checked="yes">Square
-				<input type="radio" name="bb" value="circle">Circle
-			</form>
-			<div>
-	        	<div class = "sameLine">
-	        		<label for="name">Min X</label>
-	        		<input type="text" name="name" id="name" value="" placeholder="0" maxlength="4" size="10"/>
-				</div>
-				<div class = "sameLine">
-	     			<label for="name">Min Y</label>
-	     			<input type="text" name="name" id="name" value="" placeholder="0" maxlength="4" size="10"/>
-				</div>
-			</div>
-			<div>
-	        	<div class = "sameLine">
-	        		<label for="name">Max X</label>
-	        		<input type="text" name="name" id="name" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-				<div class = "sameLine">
-	     			<label for="name">Max Y</label>
-	     			<input type="text" name="name" id="name" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-			</div>
-        	<button type="submit" onclick="addMgTile();">Add Tile</button>
-		</div>
-		<div class="tile" id="fg">
-        	<h2>Foreground Tile</h2>
-        	<input type="file" id="fgImage" accept="image/x-png"/>
-        	<div>
-	        	<div class = "sameLine">
-	        		<label for="sizeX">Size X</label>
-	        		<input type="text" name="sizeX" id="fgSizeX" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-				<div class = "sameLine">
-	     			<label for="sizeY">Size Y</label>
-	     			<input type="text" name="sizeY" id="fgSizeY" value="" placeholder="32" maxlength="4" size="10"/>
-				</div>
-			</div>
-        	<button type="submit" onclick="addFgTile();">Add Tile</button>
-		</div>
     </body>
 </html>
