--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <script type="text/javascript" src="scripts/utilities/gl-matrix.js"></script>
-        <script type="text/javascript" src="scripts/utilities/jquery-1.9.1.js"></script>
+        <script type="text/javascript" src="scripts/utilities/gl-matrix-min.js"></script>
+        <script type="text/javascript" src="scripts/utilities/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="scripts/utilities/utils.js"></script>
         <script type="text/javascript" src="scripts/utilities/Inheritance.js"></script>
         <script type="text/javascript" src="scripts/utilities/InputManager.js"></script>
