Added loading of fabrics, particles and animated tiles in xml, and removed some unused code.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script type="text/javascript" src="scripts/BoundingBox.js"></script>
         <script type="text/javascript" src="scripts/ShadowHandler.js"></script>
         <script type="text/javascript" src="scripts/Shadow.js"></script>
+        <script type="text/javascript" src="scripts/TriggerFunctions.js"></script>
         
         <script type="text/javascript" src="scripts/QuadTree.js"></script>
         <script type="text/javascript" src="scripts/QuadLine.js"></script>
