Added support for multiple worlds and a basic menu for selecting between them.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <script type="text/javascript" src="scripts/ShadowHandler.js"></script>
         <script type="text/javascript" src="scripts/Shadow.js"></script>
         <script type="text/javascript" src="scripts/TriggerFunctions.js"></script>
-        
+        <script type="text/javascript" src="scripts/MainMenu.js"></script>
+        <script type="text/javascript" src="scripts/Window.js"></script>
+        <script type="text/javascript" src="scripts/Button.js"></script>
+        <script type="text/javascript" src="scripts/MenuRenderer.js"></script>
         <script type="text/javascript" src="scripts/QuadTree.js"></script>
         <script type="text/javascript" src="scripts/QuadLine.js"></script>
         <script type="text/javascript" src="scripts/QuadPoint.js"></script>
