Added settings for rain. Changed some rendering and handling of guiWidgets. Added loading of rain from worlds xml.

--- a/editor.html
+++ b/editor.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="scripts/EditorMain.js"></script>
         <script type="text/javascript" src="scripts/Editor.js"></script>
         <script type="text/javascript" src="scripts/Window.js"></script>
-        <script type="text/javascript" src="scripts/Button.js"></script>
+        <script type="text/javascript" src="scripts/Widgets.js"></script>
         <title>Editor for WebScroller</title>
     </head>
     <body onload="startEditor();">
