--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <script type="text/javascript" src="scripts/TriggerFunctions.js"></script>
         <script type="text/javascript" src="scripts/MainMenu.js"></script>
         <script type="text/javascript" src="scripts/Window.js"></script>
-        <script type="text/javascript" src="scripts/Button.js"></script>
+        <script type="text/javascript" src="scripts/Widgets.js"></script>
         <script type="text/javascript" src="scripts/MenuRenderer.js"></script>
+        
         <script type="text/javascript" src="scripts/QuadTree.js"></script>
         <script type="text/javascript" src="scripts/QuadLine.js"></script>
         <script type="text/javascript" src="scripts/QuadPoint.js"></script>
