--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <script type="text/javascript" src="scripts/Window.js"></script>
         <script type="text/javascript" src="scripts/Widgets.js"></script>
         <script type="text/javascript" src="scripts/MenuRenderer.js"></script>
-        
+     	<script type="text/javascript" src="scripts/WaterMass.js"></script>
+                
         <script type="text/javascript" src="scripts/QuadTree.js"></script>
         <script type="text/javascript" src="scripts/QuadLine.js"></script>
         <script type="text/javascript" src="scripts/QuadPoint.js"></script>
